--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cors": "^2.7.1",
     "dotenv": "^8.2.0",
     "dynamoose": "^1.11.1",
-    "elasticsearch": "^16.1.1",
+    "@opensearch-project/opensearch": "^2.2.0",
     "express": "^4.15.4",
     "express-fileupload": "^1.1.6",
     "express-interceptor": "^1.2.0",
